# Dependencies

./: .gitattributes  appveyor.yml  azure-pipelines.yml  build.cmd  build_package.py  python-2.7-superstatic-build.patch  python.vcxproj
.github/workflows/: ci.yml  release.yml
crash_reporting/: CMakeLists.txt  crash_reporting.cpp  crash_reporting.h
minhook/: CMakeLists.txt
